--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -7,5 +7,8 @@
   "Страница не найдена": "Page not found",
   "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
   "Обновить страницу": "Обновить страницу",
-  "throw error": "throw error"
+  "throw error": "throw error",
+  "Короткий язык": "En",
+  "О сайте": "About site",
+  "Главная": "Main"
 }
