--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -10,5 +10,6 @@
   "throw error": "throw error",
   "Короткий язык": "En",
   "О сайте": "About site",
-  "Главная": "Main"
+  "Главная": "Main",
+  "Войти": "Login"
 }
