--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -10,5 +10,6 @@
   "throw error": "throw error",
   "Короткий язык": "Ру",
   "О сайте": "О сайте",
-  "Главная": "Главная"
+  "Главная": "Главная",
+  "Войти": "Войти"
 }
