Add new input, login form

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -11,5 +11,7 @@
   "Короткий язык": "En",
   "О сайте": "About site",
   "Главная": "Main",
-  "Войти": "Login"
+  "Войти": "Login",
+  "Введите username": "Enter username",
+  "Введите пароль": "Enter password"
 }
