--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -11,5 +11,7 @@
   "Короткий язык": "Ру",
   "О сайте": "О сайте",
   "Главная": "Главная",
-  "Войти": "Войти"
+  "Войти": "Войти",
+  "Введите username": "Введите username",
+  "Введите пароль": "Введите пароль"
 }
