login form, redux config, rewrited storybook to new version

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -13,5 +13,8 @@
   "Главная": "Главная",
   "Войти": "Войти",
   "Введите username": "Введите username",
-  "Введите пароль": "Введите пароль"
+  "Введите пароль": "Введите пароль",
+  "Форма авторизации": "Форма авторизации",
+  "Неверное имя пользователя или пароль": "Неверное имя пользователя или пароль",
+  "Выйти": "Выйти"
 }
