--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -13,5 +13,8 @@
   "Главная": "Main",
   "Войти": "Login",
   "Введите username": "Enter username",
-  "Введите пароль": "Enter password"
+  "Введите пароль": "Enter password",
+  "Форма авторизации": "Authorization",
+  "Неверное имя пользователя или пароль": "User with such email/password not found",
+  "Выйти": "Logout"
 }
