--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -17,5 +17,6 @@
   "Форма авторизации": "Форма авторизации",
   "Неверное имя пользователя или пароль": "Неверное имя пользователя или пароль",
   "Выйти": "Выйти",
-  "Профиль": "Профиль"
+  "Профиль": "Профиль",
+  "Редактировать": "Редактировать"
 }
