--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -1,4 +1,8 @@
 {
     "Профиль": "Profile",
-    "Редактировать": "edit"
+    "Редактировать": "edit",
+    "Ваше имя": "Your name",
+    "Ваша фамилия": "Your lastname",
+    "Отменить": "Cancel",
+    "Сохранить": "Save"
 }
