--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -18,5 +18,9 @@
   "Неверное имя пользователя или пароль": "Неверное имя пользователя или пароль",
   "Выйти": "Выйти",
   "Профиль": "Профиль",
-  "Редактировать": "Редактировать"
+  "Редактировать": "Редактировать",
+  "Сохранить": "Сохранить",
+  "Ваша валюта": "Ваша валюта",
+  "Ваша страна": "Ваша страна",
+  "Не указано": "Не указано"
 }
