--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -1,4 +1,8 @@
 {
     "Профиль": "Профиль",
-    "Редактировать": "Редактировать"
+    "Редактировать": "Редактировать",
+    "Ваше имя": "Ваше имя",
+    "Ваша фамилия": "Ваша фамилия",
+    "Отменить": "Отменить",
+    "Сохранить": "Сохранить"
 }
