--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -3,6 +3,19 @@
     "Редактировать": "Редактировать",
     "Ваше имя": "Ваше имя",
     "Ваша фамилия": "Ваша фамилия",
+    "Ваша валюта": "Ваша валюта",
+    "Ваша страна": "Ваша страна",
+    "Ваш город": "Ваш город",
+    "Ваше имя пользователя": "Ваше имя пользователя",
+    "Ваш аватар": "Ваш аватар",
+    "Ваш возраст": "Ваш возраст",
+    "Не указано": "Не указано",
     "Отменить": "Отменить",
-    "Сохранить": "Сохранить"
+    "Сохранить": "Сохранить",
+    "Серверная ошибка": "Серверная ошибка",
+    "Некорректный возраст": "Некорректный возраст",
+    "Некорректная страна": "Некорректная страна",
+    "Некорректные имя фамилия": "Некорректные имя фамилия",
+    "Что-то пошло не так": "Что-то пошло не так",
+    "Некорректный юзернейм": "Некорректный юзернейм"
 }
