--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -17,10 +17,5 @@
   "Форма авторизации": "Форма авторизации",
   "Неверное имя пользователя или пароль": "Неверное имя пользователя или пароль",
   "Выйти": "Выйти",
-  "Профиль": "Профиль",
-  "Редактировать": "Редактировать",
-  "Сохранить": "Сохранить",
-  "Ваша валюта": "Ваша валюта",
-  "Ваша страна": "Ваша страна",
-  "Не указано": "Не указано"
+  "Профиль": "Профиль"
 }
