--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -17,9 +17,5 @@
   "Форма авторизации": "Authorization",
   "Неверное имя пользователя или пароль": "User with such email/password not found",
   "Выйти": "Logout",
-  "Профиль": "Profile",
-  "Редактировать": "edit",
-  "Ваша валюта": "Your currency",
-  "Ваша страна": "Your contry",
-  "Не указано": "Not specified"
+  "Профиль": "Profile"
 }
