Add article, article comments

--- a/public/locales/en/articleDetails.json
+++ b/public/locales/en/articleDetails.json
@@ -1,4 +1,5 @@
 {
   "Статья с таким айди не найдена": "Article with such id not found",
-  "Ошибка": "Error"
+  "Ошибка": "Error",
+  "Комментарии": "Comments"
 }
