--- a/public/locales/ru/articleDetails.json
+++ b/public/locales/ru/articleDetails.json
@@ -1,4 +1,5 @@
 {
   "Статья с таким айди не найдена": "Статия с таким айди не найдена",
-  "Ошибка": "Ошибка"
+  "Ошибка": "Ошибка",
+  "Комментарии": "Комментарии"
 }
