Add sendcomment feature

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,3 +1,5 @@
 {
-  "Комментариев нет": "No comments yet"
+  "Комментариев нет": "No comments yet",
+  "Введите тест комментария": "Type your comment",
+  "Отправить": "Send"
 }
