--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -1,3 +1,5 @@
 {
-  "Комментариев нет": "Комментариев нет"
+  "Комментариев нет": "Комментариев нет",
+  "Введите тест комментария": "Введите тест комментария",
+  "Отправить": "Отправить"
 }
