Add articles list

--- a/public/locales/en/articleDetails.json
+++ b/public/locales/en/articleDetails.json
@@ -1,5 +1,6 @@
 {
   "Статья с таким айди не найдена": "Article with such id not found",
   "Ошибка": "Error",
-  "Комментарии": "Comments"
+  "Комментарии": "Comments",
+  "Назад к списку": "Back to list"
 }
