--- a/public/locales/ru/articleDetails.json
+++ b/public/locales/ru/articleDetails.json
@@ -1,5 +1,6 @@
 {
   "Статья с таким айди не найдена": "Статия с таким айди не найдена",
   "Ошибка": "Ошибка",
-  "Комментарии": "Комментарии"
+  "Комментарии": "Комментарии",
+  "Назад к списку": "Назад к списку"
 }
