Add filters to articles page

--- a/public/locales/en/articles.json
+++ b/public/locales/en/articles.json
@@ -1,3 +1,16 @@
 {
-  "Изображение статьи": "Article preview"
+  "Изображение статьи": "Article preview",
+  "Сортировать по": "Sort by",
+  "Поиск": "Search",
+  "возрастанию": "ascending",
+  "убыванию": "descending",
+  "дате создания": "create date",
+  "названию": "title",
+  "просмотрам": "views",
+  "по": "by",
+  "Айти": "IT",
+  "Все": "all",
+  "наука": "",
+  "Наука": "Science",
+  "Экономика": "Economics"
 }
