--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,5 +1,6 @@
 {
   "Комментариев нет": "No comments yet",
   "Введите тест комментария": "Type your comment",
-  "Отправить": "Send"
+  "Отправить": "Send",
+  "Статьи не найденый": "Articles not found"
 }
