--- a/public/locales/ru/articles.json
+++ b/public/locales/ru/articles.json
@@ -1,3 +1,16 @@
 {
-  "Изображение статьи": "Изображение статьи"
+  "Изображение статьи": "Изображение статьи",
+  "Сортировать по": "Сортировать по",
+  "Поиск": "Поиск",
+  "возрастанию": "возрастанию",
+  "убыванию": "убыванию",
+  "дате создания": "дате создания",
+  "названию": "названию",
+  "просмотрам": "Просмотрам",
+  "по": "по",
+  "Айти": "Айти",
+  "Все": "Все",
+  "наука": "",
+  "Наука": "Наука",
+  "Экономика": "Экономика"
 }
