--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -1,5 +1,6 @@
 {
   "Комментариев нет": "Комментариев нет",
   "Введите тест комментария": "Введите тест комментария",
-  "Отправить": "Отправить"
+  "Отправить": "Отправить",
+  "Статьи не найденый": "Статьи не найденый"
 }
