Add article recommendations

--- a/public/locales/en/articleDetails.json
+++ b/public/locales/en/articleDetails.json
@@ -2,5 +2,6 @@
   "Статья с таким айди не найдена": "Article with such id not found",
   "Ошибка": "Error",
   "Комментарии": "Comments",
-  "Назад к списку": "Back to list"
+  "Назад к списку": "Back to list",
+  "Рекомендуем": "Recommend"
 }
