--- a/public/locales/ru/articleDetails.json
+++ b/public/locales/ru/articleDetails.json
@@ -2,5 +2,6 @@
   "Статья с таким айди не найдена": "Статия с таким айди не найдена",
   "Ошибка": "Ошибка",
   "Комментарии": "Комментарии",
-  "Назад к списку": "Назад к списку"
+  "Назад к списку": "Назад к списку",
+  "Рекомендуем": "Рекомендуем"
 }
